--- a/index.Rmd
+++ b/index.Rmd
@@ -101,4 +101,15 @@ The data in the tidytuesday package only contains yearly totals from 2016-2018. 
 
 [FILL] Should include at least one plot or numerical summary for each of your questions, that helps the reader arrive at an answer. You should also write paragraphs describing the methods, summaries and findings. 
 
+## Energy types contribution to total energy production for each country in Europe
+
+```{r contribution-tbl, include=FALSE}
+extract_total_net <- function(x){
+total_year <- country_totals %>% 
+  filter(type=="Total net production", year==x) %>%
+  select(-type,-country) %>%
+  pivot_wider(names_from = "level", values_from ="energy")
+return(total_year)
+}
+
 # References
